--- a/src/styles.css
+++ b/src/styles.css
@@ -11,7 +11,10 @@ input {
 }
 
 body {
-  background-color: black;
+  height: 100vh;
+  background-image:url('/src/images/backimage.jpg') ;
+  background-size:cover;
+  /* background-color: black; */
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 14px;
